feat: Finalização da aula 3

--- a/biome.json
+++ b/biome.json
@@ -25,8 +25,9 @@
       "suspicious": {
         "noExplicitAny": "off"
       },
+
       "correctness": {
-        "noUnusedImports": "warn",
+        "noUnusedImports": "off",
         "useExhaustiveDependencies": "off"
       }
     }
